Fix landing background alignment

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -35,6 +35,7 @@ body {
 	.first-box {
 		.first-bg {
 			background-image: url("../img/bg/photo-1536009744269-d24508b32196-1000px.jpg");
+			background-position-y: 0%;
 			opacity: 0.6;
 		}
 	}
